[package]
name = "tetris-stream"
version = "0.1.0"
authors = ["Ben Allison <ben@checkfront.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_cors = "0.2.3"
serde = "*"
serde_json = "*"
serde_derive = "*"

diesel = { version = "1.0.*", features = ["postgres"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.2"
lazy_static = "0.2.8"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
